# hikvision-partition-manager

./: .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  install.sh  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: b2-backup-stalled.md
.planning/phases/01-foundation/: 01-01-PLAN.md  (+9 more)
.planning/quick/: PLAN.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_partition_location_deleted_at.py
app/: main.py
app/cameras/: models.py  routes.py  schemas.py  service.py
app/core/: config.py  crypto.py  database.py  inflight.py  logging.py  schemas.py
app/isapi/: client.py
app/jobs/: __init__.py  auto_rearm.py  monitors.py  scheduler.py
app/locations/: models.py  routes.py  schemas.py
app/middleware/: logging.py
app/nvrs/: models.py  routes.py  schemas.py
app/partitions/: models.py  routes.py  schemas.py  service.py
app/static/: style.css
app/templates/: 404.html  base.html  dashboard.html  locations.html  nvrs.html  partition_detail.html  partition_form.html
app/ui/: routes.py
hikvision_partition_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  mocks.py  test_arm.py  test_cameras.py  test_core.py  test_disarm.py  test_infra.py  test_isapi_client.py  test_jobs_auto_rearm.py  test_jobs_monitors.py  test_locations.py  test_nvrs.py  test_partitions.py  test_schema.py  test_ui.py
(+60 files in other folders)
